--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "prettier": "^2.8.1",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "prettier": "2.8.1"
   }
 }
